# librespot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  COMPILING.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  PUBLISHING.md  README.md  SECURITY.md  build.rs  fkspot.cfg  librespot-hqplayer-controller  publish.sh  rustfmt.toml  spotify-connect.sh  test.sh
audio/: Cargo.toml
audio/src/: convert.rs  decrypt.rs  dither.rs  fetch.rs  lewton_decoder.rs  lib.rs  libvorbis_decoder.rs  passthrough_decoder.rs  range_set.rs  shape_noise.rs
audio/src/fetch/: mod.rs  receive.rs
audio/src/range_set/: range.rs
connect/: Cargo.toml  Cargo.toml-e  README.md  build.rs
connect/src/: config.rs  context.rs  context_resolver.rs  discovery.rs  lib.rs  model.rs  shuffle_vec.rs  spirc.rs  state.rs
connect/src/state/: consts.rs  context.rs  handle.rs  metadata.rs  options.rs  provider.rs  restrictions.rs  tracks.rs  transfer.rs
core/: Cargo.toml  Cargo.toml-e  build.rs
core/src/: apresolve.rs  audio_key.rs  authentication.rs  cache.rs  cdn_url.rs  channel.rs  component.rs  config.rs  date.rs  deserialize_with.rs  diffie_hellman.rs  error.rs  events.rs  file_id.rs  http_client.rs  keymaster.rs  lib.in.rs  lib.rs  login5.rs  packet.rs  proxytunnel.rs  session.rs  socket.rs  spclient.rs  spotify_id.rs  spotify_uri.rs  token.rs  util.rs  version.rs  volume.rs
core/src/connection/: codec.rs  handshake.rs  mod.rs
core/src/dealer/: api.rs  manager.rs  maps.rs  mod.rs  protocol.rs
core/src/mercury/: mod.rs  sender.rs  types.rs
core/src/session/: audio_key.rs  channel.rs  component.rs
core/src/util/: int128.rs  mod.rs  spotify_id.rs  subfile.rs
core/tests/: connect.rs
discovery/: Cargo.toml  Cargo.toml-e
discovery/examples/: discovery.rs  discovery_group.rs
discovery/src/: avahi.rs  discovery.rs  lib.rs  server.rs
metadata/: Cargo.toml  Cargo.toml-e
metadata/src/: album.rs  artist.rs  availability.rs  content_rating.rs  copyright.rs  cover.rs  date.rs  episode.rs  error.rs  external_id.rs  image.rs  lib.rs  lyrics.rs  request.rs  restriction.rs  sale_period.rs  show.rs  track.rs  util.rs  video.rs
metadata/src/audio/: file.rs  item.rs  mod.rs
metadata/src/playlist/: annotation.rs  attribute.rs  diff.rs  item.rs  list.rs  mod.rs  operation.rs  permission.rs
oauth/: Cargo.toml
oauth/examples/: oauth.rs  oauth_async.rs  oauth_sync.rs  response.html
oauth/src/: lib.rs
playback/: Cargo.toml
playback/src/: config.rs  convert.rs  dither.rs  filter_coefficients.rs  lib.rs  local_file.rs  normaliser.rs  player.rs  resampler.rs  sample_pipeline.rs  symphonia_util.rs
playback/src/audio_backend/: alsa.rs  cpal.rs  gstreamer.rs  jackaudio.rs  mod.rs  pipe.rs  pipewire.rs  portaudio.rs  pulseaudio.rs  rodio.rs  sdl.rs  subprocess.rs
playback/src/decoder/: lewton_decoder.rs  libvorbis_decoder.rs  mod.rs  passthrough_decoder.rs  symphonia_decoder.rs
playback/src/mixer/: alsamixer.rs  mappings.rs  mod.rs  nullmixer.rs  pipemixer.rs  softmixer.rs
protocol/: Cargo.toml  authentication.proto  build.rs  build.sh  files.rs  keyexchange.proto  mercury.proto  metadata.proto  spirc.proto
protocol/proto/: AdContext.proto  AdDecisionEvent.proto  AdError.proto  AdEvent.proto  AdRequestEvent.proto  AdSlotEvent.proto  AmazonWakeUpTime.proto  AudioDriverError.proto  AudioDriverInfo.proto  AudioFileSelection.proto  AudioOffliningSettingsReport.proto  AudioRateLimit.proto  AudioSessionEvent.proto  AudioSettingsReport.proto  AudioStreamingSettingsReport.proto  BoomboxPlaybackInstrumentation.proto  BrokenObject.proto  CacheError.proto  CachePruningReport.proto  CacheRealmPruningReport.proto  CacheRealmReport.proto  CacheReport.proto  ClientLocale.proto  ColdStartupSequence.proto  CollectionLevelDbInfo.proto  CollectionOfflineControllerEmptyTrackList.proto  ConfigurationApplied.proto  ConfigurationFetched.proto  ConfigurationFetchedNonAuth.proto  ConnectCredentialsRequest.proto  ConnectDeviceDiscovered.proto  ConnectDialError.proto  ConnectMdnsPacketParseError.proto  ConnectPullFailure.proto  ConnectTransferResult.proto  ConnectionError.proto  ConnectionInfo.proto  ConnectionStateChange.proto  DefaultConfigurationApplied.proto  DesktopAuthenticationFailureNonAuth.proto  (+389 more)
protocol/proto/collection/: album_collection_state.proto  artist_collection_state.proto  episode_collection_state.proto  show_collection_state.proto  track_collection_state.proto
protocol/proto/dependencies/: session_control.proto
protocol/proto/metadata/: album_metadata.proto  artist_metadata.proto  episode_metadata.proto  extension.proto  image_group.proto  show_metadata.proto  track_metadata.proto
protocol/proto/played_state/: episode_played_state.proto  playability_restriction.proto  show_played_state.proto  track_played_state.proto
protocol/proto/policy/: album_decoration_policy.proto  artist_decoration_policy.proto  episode_decoration_policy.proto  folder_decoration_policy.proto  playlist_album_decoration_policy.proto  playlist_decoration_policy.proto  playlist_episode_decoration_policy.proto  playlist_request_decoration_policy.proto  playlist_track_decoration_policy.proto  rootlist_folder_decoration_policy.proto  rootlist_playlist_decoration_policy.proto  rootlist_request_decoration_policy.proto  show_decoration_policy.proto  supported_link_types_in_playlists.proto  track_decoration_policy.proto  user_decoration_policy.proto
protocol/proto/state_restore/: ads_rules_inject_tracks.proto  automix_rules.proto  automix_talk_rules.proto  behavior_metadata_rules.proto  circuit_breaker_rules.proto  context_loader.proto  context_player_restorable.proto  context_player_rules.proto  context_player_rules_base.proto  context_player_state.proto  explicit_content_rules.proto  explicit_request_rules.proto  kitteh_box_rules.proto  mft_context_history.proto  (+19 more)
protocol/src/: authentication.rs  conversion.rs  impl_trait.rs  keyexchange.rs  lib.rs  mercury.rs  metadata.rs  playlist4changes.rs  playlist4content.rs  playlist4issues.rs  playlist4meta.rs  playlist4ops.rs  pubsub.rs  spirc.rs
(+150 files in other folders)
