[package]
name = "librespot"
version = "0.6.0-dev"
rust-version = "1.81"
authors = ["Librespot Org"]
license = "MIT"
description = "An open source client library for Spotify, with support for Spotify Connect"
keywords = ["spotify"]
repository = "https://github.com/librespot-org/librespot"
readme = "README.md"
edition = "2021"

[workspace]

[lib]
name = "librespot"
path = "src/lib.rs"

[[bin]]
name = "librespot"
path = "src/main.rs"
doc = false

[[bin]]
name = "fkspot"
path = "fkspot/src/main.rs"
doc = false

[dependencies.librespot-audio]
path = "audio"
version = "0.6.0-dev"

[dependencies.librespot-connect]
path = "connect"
version = "0.6.0-dev"

[dependencies.librespot-core]
path = "core"
version = "0.6.0-dev"

[dependencies.librespot-discovery]
path = "discovery"
version = "0.6.0-dev"
default-features = false

[dependencies.librespot-metadata]
path = "metadata"
version = "0.6.0-dev"

[dependencies.librespot-playback]
path = "playback"
version = "0.6.0-dev"

[dependencies.librespot-protocol]
path = "protocol"
version = "0.6.0-dev"

[dependencies.librespot-oauth]
path = "oauth"
version = "0.6.0-dev"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
data-encoding = "2.5"
env_logger = { version = "0.11.2", default-features = false, features = [
    "color",
    "humantime",
    "auto-color",
] }
futures-util = { version = "0.3", default-features = false }
getopts = "0.2"
log = "0.4"
sha1 = "0.10"
sysinfo = { version = "0.33.0", default-features = false, features = [
    "system",
] }
thiserror = "2.0"
tokio = { version = "1.40", features = [
    "rt",
    "macros",
    "signal",
    "sync",
    "parking_lot",
    "process",
] }
url = "2.2"
totp-rs = "5.6.0"

[features]
alsa-backend = ["librespot-playback/alsa-backend"]
portaudio-backend = ["librespot-playback/portaudio-backend"]
pulseaudio-backend = ["librespot-playback/pulseaudio-backend"]
jackaudio-backend = ["librespot-playback/jackaudio-backend"]
rodio-backend = ["librespot-playback/rodio-backend"]
rodiojack-backend = ["librespot-playback/rodiojack-backend"]
sdl-backend = ["librespot-playback/sdl-backend"]
gstreamer-backend = ["librespot-playback/gstreamer-backend"]

with-avahi = ["librespot-discovery/with-avahi"]
with-dns-sd = ["librespot-discovery/with-dns-sd"]
with-libmdns = ["librespot-discovery/with-libmdns"]

passthrough-decoder = ["librespot-playback/passthrough-decoder"]

default = ["rodio-backend", "with-libmdns"]

[package.metadata.deb]
maintainer = "librespot-org"
copyright = "2018 Paul Liétar"
license-file = ["LICENSE", "4"]
depends = "$auto"
extended-description = """\
librespot is an open source client library for Spotify. It enables applications \
to use Spotify's service, without using the official but closed-source \
libspotify. Additionally, it will provide extra features which are not \
available in the official library."""
section = "sound"
priority = "optional"
assets = [
    [
        "target/release/librespot",
        "usr/bin/",
        "755",
    ],
    [
        "contrib/librespot.service",
        "lib/systemd/system/",
        "644",
    ],
    [
        "contrib/librespot.user.service",
        "lib/systemd/user/",
        "644",
    ],
]

[workspace.package]
rust-version = "1.81"
