[package]
name = "librespot-core"
version = "0.6.0-dev"
rust-version.workspace = true
authors = ["Paul Lietar <paul@lietar.net>"]
build = "build.rs"
description = "The core functionality provided by librespot"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2021"

[dependencies.librespot-oauth]
path = "../oauth"
version = "0.6.0-dev"

[dependencies.librespot-protocol]
path = "../protocol"
version = "0.6.0-dev"

[dependencies]
aes = "0.8"
base64 = "0.22"
byteorder = "1.5"
bytes = "1"
data-encoding = "2.9"
flate2 = "1.1"
form_urlencoded = "1.2"
futures-core = "0.3"
futures-util = { version = "0.3", features = [
    "alloc",
    "bilock",
    "sink",
    "unstable",
] }
governor = { version = "0.10", default-features = false, features = [
    "std",
    "jitter",
] }
hmac = "0.12"
httparse = "1.10"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["http1", "http2"] }
hyper-proxy2 = "0.1"
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["client", "http2"] }
log = "0.4"
nonzero_ext = "0.3"
num-bigint = "0.4"
num-derive = "0.4"
num-integer = "0.1"
num-traits = "0.2"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
pin-project-lite = "0.2"
priority-queue = "2.5"
protobuf = "3.7"
protobuf-json-mapping = "3.7"
quick-xml = { version = "0.38", features = ["serialize"] }
rand = "0.9"
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = { version = "0.10", features = ["oid"] }
shannon = "0.2"
sysinfo = { version = "0.36", default-features = false, features = ["system"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "sync",
    "time",
] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.27", default-features = false, features = [
    "native-tls",
] }
tokio-util = { version = "0.7", features = ["codec"] }
url = "2"
uuid = { version = "1", default-features = false, features = ["v4"] }

[build-dependencies]
rand = "0.9"
rand_distr = "0.5"
vergen-gitcl = { version = "1.0", default-features = false, features = [
    "build",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "parking_lot"] }
