[package]
name = "librespot-discovery"
version = "0.4.2"
authors = ["Paul Lietar <paul@lietar.net>"]
description = "The discovery logic for librespot"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2018"

[dependencies]
aes-ctr = "0.6"
base64 = "0.13"
form_urlencoded = "1.0"
futures-core = "0.3"
hmac = "0.11"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
libmdns = "0.7"
log = "0.4"
rand = "0.8"
serde_json = "1.0.25"
sha-1 = "0.9"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "rt"] }

dns-sd = { version = "0.1.3", optional = true }

[dependencies.librespot-core]
path = "../core"
default_features = false
version = "0.4.2"

[dev-dependencies]
futures = "0.3"
hex = "0.4"
simple_logger = "2.1"
tokio = { version = "1.0", features = ["macros", "rt"] }

[features]
with-dns-sd = ["dns-sd"]
