[package]
name = "librespot-discovery"
version = "0.5.0-dev"
rust-version = "1.73"
authors = ["Paul Lietar <paul@lietar.net>"]
description = "The discovery logic for librespot"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2021"

[dependencies]
aes = "0.8"
base64 = "0.22"
bytes = "1"
cfg-if = "1.0"
ctr = "0.9"
dns-sd = { version = "0.1.3", optional = true }
form_urlencoded = "1.0"
futures-core = "0.3"
futures-util = "0.3"
hmac = "0.12"
hyper = { version = "1.3", features = ["http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "server-graceful", "service"] }
http-body-util = "0.1.1"
libmdns = "0.8"
log = "0.4"
rand = "0.8"
serde_json = "1.0"
sha1 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["parking_lot", "sync", "rt"] }

[dependencies.librespot-core]
path = "../core"
version = "0.5.0-dev"

[dev-dependencies]
futures = "0.3"
hex = "0.4"
tokio = { version = "1", features = ["macros", "parking_lot", "rt"] }

[features]
with-dns-sd = ["dns-sd", "librespot-core/with-dns-sd"]
