[package]
name = "librespot-metadata"
version.workspace = true
rust-version.workspace = true
authors = ["Paul Lietar <paul@lietar.net>"]
license.workspace = true
description = "The metadata logic for librespot"
repository.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
bytes = "1"
log = "0.4"
protobuf = "3.7"
thiserror = "2"
uuid = { version = "1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.librespot-core]
path = "../core"
version = "0.6.0-dev"

[dependencies.librespot-protocol]
path = "../protocol"
version = "0.6.0-dev"

[features]
# TLS backend propagation
native-tls = ["librespot-core/native-tls"]
rustls-tls = ["librespot-core/rustls-tls"]
