[package]
name = "librespot-metadata"
version.workspace = true
rust-version.workspace = true
authors = ["Paul Lietar <paul@lietar.net>"]
license.workspace = true
description = "The metadata logic for librespot"
repository.workspace = true
edition.workspace = true

[features]
# Refer to the workspace Cargo.toml for the list of features
default = ["native-tls"]

# TLS backend propagation
native-tls = ["librespot-core/native-tls"]
rustls-tls = ["librespot-core/rustls-tls"]

[dependencies]
librespot-core.workspace = true
librespot-protocol.workspace = true

async-trait = "0.1"
bytes = "1"
log = "0.4"
protobuf = "3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
uuid = { version = "1", default-features = false }
